@startuml
!theme plain

entity "usuarios" as usuarios {
  *id : INT <<PK>>
  --
  username : VARCHAR(100)
  email : VARCHAR(150)
  password : VARCHAR(255)
  created_at : DATETIME
  updated_at : DATETIME
  rol_id : INT <<FK>>
}

entity "roles" as roles {
  *id : INT <<PK>>
  --
  nombre : VARCHAR(50)
}

entity "categorias" as categorias {
  *id : INT <<PK>>
  --
  nombre : VARCHAR(100)
  descripcion : TEXT
  created_at : DATETIME
}

entity "productos" as productos {
  *id : INT <<PK>>
  --
  categoria_id : INT <<FK>>
  nombre : VARCHAR(150)
  descripcion : TEXT
  imagen : VARCHAR(255)
  precio : DECIMAL(10,2)
  created_at : DATETIME
}

entity "inventario" as inventario {
  *id : INT <<PK>>
  --
  producto_id : INT <<FK>>
  cantidad : INT
  ultima_actualizacion : DATETIME
}

entity "carrito_items" as carrito_items {
  *id : INT <<PK>>
  --
  user_id : INT <<FK>>
  session_id : VARCHAR(255)
  producto_id : INT <<FK>>
  nombre : VARCHAR(150)
  descripcion : TEXT
  imagen : VARCHAR(255)
  precio : DECIMAL(10,2)
  cantidad : INT
  added_at : DATETIME
}

entity "direcciones" as direcciones {
  *id : INT <<PK>>
  --
  user_id : INT <<FK>>
  ciudad : VARCHAR(100)
  departamento : VARCHAR(100)
  created_at : DATETIME
}

entity "contactos" as contactos {
  *id : INT <<PK>>
  --
  nombre : VARCHAR(100)
  email : VARCHAR(150)
  telefono : VARCHAR(20)
  mensaje : TEXT
  created_at : DATETIME
}

entity "resenas" as resenas {
  *id : INT <<PK>>
  --
  producto_id : INT <<FK>>
  usuario : VARCHAR(100)
  comentario : TEXT
  calificacion : INT
  fecha : DATETIME
}

' ========================
' Relaciones
' ========================

roles ||--o{ usuarios : "asigna"
categorias ||--o{ productos : "clasifica"
productos ||--|| inventario : "tiene"
usuarios ||--o{ carrito_items : "agrega"
productos ||--o{ carrito_items : "contiene"
usuarios ||--o{ direcciones : "posee"
usuarios ||--o{ contactos : "envía mensaje"
productos ||--o{ resenas : "recibe"
usuarios ||--o{ resenas : "escribe"

@enduml

